--- a/.github/workflows/Spectral.yml
+++ b/.github/workflows/Spectral.yml
@@ -4,7 +4,7 @@ name: Spectral Scan
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   schedule:
-    - cron: "0 */1 * * *"
+    - cron: "*/6 0 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
